# GoogleHashCode2018

./: Batiment.h  CMakeLists.txt  Cell.cpp  Cell.h  Map.cpp  Map.h  Parser.cpp  Parser.h  ParserOut.cpp  ParserOut.h  Placement.h  README.md  Residence.cpp  Residence.h  Utility.cpp  Utility.h  a.out  c_going_green.out  f_different_footprints.out  main.cpp
Debug/: PolyHash.ilk
PolyHash/: Batiment.cpp  Map.cpp  Map.h  ParserOut.cpp  ParserOut.h  Placement.cpp  Placement.h  PolyPlayer_a_example.txt  Residence.h  c_going_greenV2.out  d_wide_selection.out  e_precise_fit.out  main.cpp  realTest.out  test.txt
PolyHash/Debug/: placement.obj.enc  vc141.idb
PolyHashPoseBatiments/: CMakeLists.txt  Cell.cpp  Cell.h  Map.cpp  Map.h  Parser.cpp  Parser.h  PolyHash.sln  Residence.cpp  Residence.h  Utility.cpp  Utility.h  e_precise_fit.out
PolyHashPoseBatiments/Debug/: b_short_walk.out  d_wide_selection.out
PolyHashPoseBatiments/PolyHash/: Batiment.h  Parser.cpp  Parser.h  Placement.cpp  PolyHash.vcxproj  PolyHash.vcxproj.filters  Residence.cpp  Utility.cpp  Utility.h  b_short_walkV2.out  c_going_green.out  e_precise_fitV2.out  f_different_footprints.out  f_different_footprintsV2.out  main.cpp  test.out
PolyHashValidationScore/: Batiment.cpp  Cell.cpp  Parser.cpp  ParserOut.cpp  PolyPlayer_b_short_walk.txt  Residence.cpp  Residence.h  Utility.h  main.cpp
PolyHashValidationScore/Debug/: Downloads - Raccourci.lnk  main.obj.enc  parserout.obj.enc
PolyHashValidationScore/PolyHash/: Batiment.cpp  Batiment.h  Cell.h  Map.cpp  Map.h  ParserOut.cpp  ParserOut.h  PolyHash.vcxproj  (+6 more)
(+46 files in other folders)
